# CipherNet

./: .gitignore  AGENTS.md  README.md  app.js  cipher-identity-RetiredRoca.json  index.html  nostr.js  oc.sh  private_key.txt
.github/workflows/: tauri-build.yml
app/: GET_OPENPGP.md  README.md  app.css  app.js  channels.js  download-noble-pq.sh  index.html  landing.html  ml-dsa.js  noble-post-quantum.js  noble-pq-kem.js  noble-pq-wrap.js  nostr.js  package.json  secp256k1.js  sw.js
app/electrobun/: README.md  electrobun.config.ts  package.json
app/electrobun/src/: index.ts
app/electrobun/src/bun/: index.ts
app/electrobun/src/ui/: index.html
app/lib/: boot.js  channel-ui.js  crypto.js  deterrents.js  identity.js  lock-screen.js  messaging.js  nostr-ui.js  pgp-ui.js  render.js  state.js  theme.js  util.js
app/tauri/: README.md  package-lock.json  setup.sh
app/tauri/src-tauri/: Cargo.toml  tauri.conf.json
app/tauri/src-tauri/src/: lib.rs
app/tauri/web/: app.css  app.js  channels.js  index.html
tauri/: README.md  package.json  setup.sh
tauri/src-tauri/src/: lib.rs  main.rs
